--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
 /* Settingan Default untuk semua halaman 
-   Bagian ini ddipakai untuk mereset ulang elemen (tag) html*/
-
-
-/*
-Design by TEMPLATED
-http://templated.co
-Released for free under the Creative Commons Attribution License
-*/
+   Bagian ini ddipakai untuk mereset ulang elemen (tag) html
+   atau membuat settingan default untuk semua objek*/
 
 body {
 	margin: 0;
